--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,10 +14,12 @@
         android:src="@drawable/rounded_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvCorrectAnswers"
+        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
     <ImageView
             android:id="@+id/ivPreviousQuizImage"
             android:layout_width="120dp"
@@ -37,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="206dp" />
+        app:layout_constraintGuide_begin="205dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
@@ -65,13 +67,13 @@
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivCurrentQuizImage"
-        app:layout_constraintVertical_bias="0.888" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/bLower"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="592dp"
+        android:layout_marginTop="608dp"
         android:backgroundTint="#FF8888"
         android:fontFamily="@font/ubuntu"
         android:text="@string/lowerButton"
@@ -87,17 +89,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-            android:id="@+id/tvPreviousQuizName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="20dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:text="@string/app_name"
-            app:layout_constraintEnd_toStartOf="@+id/ivPreviousQuizImage"
-            app:layout_constraintTop_toTopOf="parent" android:textAlignment="textEnd"/>
+        android:id="@+id/tvPreviousQuizName"
+        android:layout_width="203dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
+        android:text="@string/app_name"
+        android:textAlignment="textEnd"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/ivPreviousQuizImage"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
             android:id="@+id/tvPreviousQuizPopularity"
@@ -145,16 +148,17 @@
             app:layout_constraintTop_toBottomOf="@+id/tvCurrentQuizName" android:textAlignment="center"/>
 
     <TextView
-            android:id="@+id/tvCorrectAnswers"
-            android:layout_width="104dp"
-            android:layout_height="33dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:text="@string/correctAnswers"
-            app:layout_constraintEnd_toEndOf="@+id/ivPreviousQuizImage"
-            app:layout_constraintHorizontal_bias="0.883"
-            app:layout_constraintStart_toStartOf="@+id/ivPreviousQuizImage"
-            app:layout_constraintTop_toBottomOf="@+id/ivPreviousQuizImage" android:textAlignment="center"/>
+        android:id="@+id/tvCorrectAnswers"
+        android:layout_width="104dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/correctAnswers"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/ivPreviousQuizImage"
+        app:layout_constraintHorizontal_bias="0.883"
+        app:layout_constraintStart_toStartOf="@+id/ivPreviousQuizImage"
+        app:layout_constraintTop_toBottomOf="@+id/ivPreviousQuizImage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
